--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-dom": "18.2.11",
     "@vercel/postgres": "^0.9.0",
     "autoprefixer": "10.4.16",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "ms": "^2.1.3",
